<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/settings_string" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:text="@string/file_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/textView7"
        android:layout_below="@+id/videoFileName"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:text="@string/sensor_settings" />
    <Switch
        android:text="Delta "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchD"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/switchT"
        android:layout_marginTop="19dp" />

    <Switch
        android:text="Middle gamma "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchMG"
        android:layout_alignBaseline="@+id/switchHA"
        android:layout_alignBottom="@+id/switchHA"
        android:layout_alignStart="@+id/switchLB" />

    <Switch
        android:text="Low gamma "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchLG"
        android:layout_alignBaseline="@+id/switchLA"
        android:layout_alignBottom="@+id/switchLA"
        android:layout_alignStart="@+id/switchMG" />

    <Switch
        android:text="Low beta "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchLB"
        android:layout_alignBaseline="@+id/switchD"
        android:layout_alignBottom="@+id/switchD"
        android:layout_alignStart="@+id/switchHB" />

    <Switch
        android:text="Theta "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchT"
        android:layout_below="@+id/switchD"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="14dp" />

    <Switch
        android:text="Hight beta "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchHB"
        android:layout_marginStart="58dp"
        android:layout_alignBaseline="@+id/switchT"
        android:layout_alignBottom="@+id/switchT"
        android:layout_toEndOf="@+id/switchHA" />

    <Switch
        android:text="Low alpha "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchLA"
        android:layout_below="@+id/switchT"
        android:layout_alignStart="@+id/switchT"
        android:layout_marginTop="19dp" />

    <Switch
        android:text="Hight alpha "
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchHA"
        android:layout_below="@+id/switchLA"
        android:layout_alignStart="@+id/switchLA"
        android:layout_marginTop="25dp" />

    <Switch
        android:text="@string/attention_string"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchHA"
        android:layout_alignStart="@+id/switchHA"
        android:layout_marginTop="13dp"
        android:id="@+id/switchAttention" />

    <Switch
        android:text="@string/meditation_string"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchMeditation"
        android:layout_alignBaseline="@+id/switchAttention"
        android:layout_alignBottom="@+id/switchAttention"
        android:layout_alignEnd="@+id/switchHB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:id="@+id/buttonSave"
        android:text="@string/save_btn" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:id="@+id/buttonRestoreDefault"
        tools:text="@string/defaults_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/videoFileName"
        android:text="@string/insert_filename"
        android:textColor="@android:color/black"
        android:maxLines="1"
        android:textSize="14sp"
        android:background="#ffffff"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/switchD" />

</RelativeLayout>